# swr

./: .gitignore  pyproject.toml
02/: 02.ipynb  02.py  code_swr2_session02.py
03/: 03.ipynb  code_swr2_session03.py
04/: 04.ipynb  create_example_tones.py  intro_pytorch.py
05/: 05.ipynb
